examples/pos/auction/bob.oio
BOB

channel AUCTIONHOUSE/BID@{H} : (string@{}*int@{H})@{};

var max_bid : int@{H} = 350;

#reach [AUCTIONHOUSE/BID]
#cost 0
#overhead 1
AUCTION_STATUS@{} (bid : (string@{H}*int@{H})@{H}) {
    oblif snd bid < max_bid and fst bid != "Bob"
    then send(AUCTIONHOUSE/BID, ("Bob", snd bid + 1));
    else skip;
}

AUCTION_OVER@{} (winner : (string@{H}*int@{H})@{H}) {
    print("Auction won by", fst winner);
    print("Winning bid was", snd winner);
    exit();
}
